[gd_scene load_steps=4 format=3 uid="uid://c1wb3h0lybq8n"]

[ext_resource type="Script" path="res://Scripts/civilian_spawner.gd" id="1_njcif"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ooek5"]
radius = 308.016

[sub_resource type="CircleShape2D" id="CircleShape2D_28cvr"]
radius = 5000.0

[node name="CivilianSpawner" type="Area2D"]
collision_layer = 4
collision_mask = 16
script = ExtResource("1_njcif")

[node name="DefaultCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ooek5")
debug_color = Color(0.65098, 0.329412, 1, 0.419608)

[node name="DespawnArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnArea"]
visible = false
shape = SubResource("CircleShape2D_28cvr")
debug_color = Color(0.701961, 0.27451, 1, 0.419608)

[node name="SpawnedCivilians" type="Node" parent="."]

[node name="SpawnDelay" type="Timer" parent="."]
one_shot = true
autostart = true
